[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traced"
version = "0.1.0"
description = "A project using numba"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "numba",
    "pytest",
]

[tool.setuptools]
py-modules = ["tracer"]
